docs/api/qiskit/0.25/qiskit.algorithms.MinimumEigensolver.mdx
---
title: MinimumEigensolver (v0.25)
description: API reference for qiskit.algorithms.MinimumEigensolver in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.MinimumEigensolver
---

<span id="qiskit-algorithms-minimumeigensolver" />

# qiskit.algorithms.MinimumEigensolver

<Class id="qiskit.algorithms.MinimumEigensolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/algorithms/minimum_eigen_solvers/minimum_eigen_solver.py" signature="MinimumEigensolver" modifiers="class">
  The Minimum Eigensolver Interface.

  Algorithms that can compute a minimum eigenvalue for an operator may implement this interface to allow different algorithms to be used interchangeably.

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.MinimumEigensolver.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                                    |                                                                              |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.algorithms.MinimumEigensolver.__init__ "qiskit.algorithms.MinimumEigensolver.__init__")()                                                                     | Initialize self.                                                             |
  | [`compute_minimum_eigenvalue`](#qiskit.algorithms.MinimumEigensolver.compute_minimum_eigenvalue "qiskit.algorithms.MinimumEigensolver.compute_minimum_eigenvalue")(operator\[, …]) | Computes minimum eigenvalue.                                                 |
  | [`supports_aux_operators`](#qiskit.algorithms.MinimumEigensolver.supports_aux_operators "qiskit.algorithms.MinimumEigensolver.supports_aux_operators")()                           | Whether computing the expectation value of auxiliary operators is supported. |

  ### compute\_minimum\_eigenvalue

  <Function id="qiskit.algorithms.MinimumEigensolver.compute_minimum_eigenvalue" signature="compute_minimum_eigenvalue(operator, aux_operators=None)" modifiers="abstract">
    Computes minimum eigenvalue. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** (`OperatorBase`) – Qubit operator of the Observable
    *   **aux\_operators** (`Optional`\[`List`\[`Optional`\[`OperatorBase`]]]) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Return type**

    `MinimumEigensolverResult`

    **Returns**

    MinimumEigensolverResult
  </Function>

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.MinimumEigensolver.supports_aux_operators" signature="supports_aux_operators()" modifiers="classmethod">
    Whether computing the expectation value of auxiliary operators is supported.

    If the minimum eigensolver computes an eigenstate of the main operator then it can compute the expectation value of the aux\_operators for that state. Otherwise they will be ignored.

    **Return type**

    `bool`

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise
  </Function>
</Class>

